2006-05-03  Werner Lemberg  <wl@gnu.org>

	* mf/GNUmakefile (FC_FIND): Fix typo.

2006-05-03  Erlend Aasland  <erlenda@gmail.com>

	* stepmake/stepmake/generic-targets.make (cvs-clean): also remove out-www dirs.

2006-05-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/aclocal.m4: run python-config for crosscompiling
	flags. Backportme.

	* scripts/lilypond-book.py (Lilypond_file_snippet.my_system): add
	-f png for HTML, TEXINFO formats. Backportme.

	* input/tutorial/lbook-html-test.html: new file.

	* lily/include/tie-formatting-problem.hh (class
	Tie_formatting_problem): index Chord_outline_map by Tuple2 for
	[column, direction]. This fixes laissez vibrer ties.
 
	* flower/include/tuple.hh (struct Tuple2): new file.

	* mf/GNUmakefile (FC_FIND): new function. Find ncsb using
	$(FCMATCH), only if $(NCSB_DIR) not set. Backportme.

	* configure.in (LINK_GXX_STATICALLY): only warn if $NCSB_DIR set.

	* config.make.in (DOCUMENTATION): set FCMATCH. Backportme. 

	* autogen.sh (srcdir): don't set --with-ncsb-dir. Backportme.

2006-05-03  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: final round of reorg.

	* Documentation/user/instrument-notation.itely: some more
	fixes from Eduardo, thanks!

2006-05-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.3

	* flower/file-path.cc (is_dir): canonicalize file name before stat'ing.

	* lily/relocate.cc (framework_relocation): remove old relocation stuff.

2006-05-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	Correct typo, thanks to Eduardo.

2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/GNUmakefile (SEXECUTABLES): remove lilypond-ps2png.scm

	* buildscripts/lilypond-words.py (F): indent fix.

	* input/regression/tie-arpeggio-collision.ly: new file.

	* lily/tie-formatting-problem.cc (set_column_chord_outline): new
	function: store outlines per column rank.
